--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -338,8 +338,7 @@ tw-story[tags~="background3"] {
 }
 
 .scrap-img {
-  position: absolute;
-  width: 150px; /* Adjust the size of the images as you wish */
+  width: 150px; /* Adjust the size as needed */
   opacity: 1;
   transition: transform 0.5s ease;
   z-index: 1;
@@ -535,15 +534,15 @@ The bedroom that could fit the water tank inside of it maybe,
 &lt;span class=&quot;falling-text&quot; style=&quot;--random-x: _x; animation-delay: _delay + s;&quot;&gt;
   _text
 &lt;/span&gt;</tw-passagedata><tw-passagedata pid="16" name="messy table" tags="backgroundimage3" position="300,1125" size="100,100">:: Start
-(set: $images to (array: &quot;letter.jpg&quot;, &quot;family.jpg&quot;, &quot;photo3.png&quot;, &quot;ticket.png&quot;, &quot;postcard.jpg&quot;))
-(set: $image1 to &quot;&lt;img src=&#39;images/&quot; + (either: &quot;letter.jpg&quot;, &quot;family.jpg&quot;, &quot;photo3.png&quot;, &quot;ticket.png&quot;, &quot;postcard.jpg&quot;) + &quot;&#39; class=&#39;scrap-img&#39; style=&#39;top:&quot; + (random: 0, 90) + &quot;%; left:&quot; + (random: 0, 90) + &quot;%; transform: rotate(&quot; + (random: -30, 30) + &quot;deg);&#39;&gt;&quot;)
-(set: $image2 to &quot;&lt;img src=&#39;images/&quot; + (either: &quot;letter.jpg&quot;, &quot;family.jpg&quot;, &quot;photo3.png&quot;, &quot;ticket.png&quot;, &quot;postcard.jpg&quot;) + &quot;&#39; class=&#39;scrap-img&#39; style=&#39;top:&quot; + (random: 0, 90) + &quot;%; left:&quot; + (random: 0, 90) + &quot;%; transform: rotate(&quot; + (random: -30, 30) + &quot;deg);&#39;&gt;&quot;)
-(set: $image3 to &quot;&lt;img src=&#39;images/&quot; + (either: &quot;letter.jpg&quot;, &quot;family.jpg&quot;, &quot;photo3.png&quot;, &quot;ticket.png&quot;, &quot;postcard.jpg&quot;) + &quot;&#39; class=&#39;scrap-img&#39; style=&#39;top:&quot; + (random: 0, 90) + &quot;%; left:&quot; + (random: 0, 90) + &quot;%; transform: rotate(&quot; + (random: -30, 30) + &quot;deg);&#39;&gt;&quot;)
-(set: $image4 to &quot;&lt;img src=&#39;images/&quot; + (either: &quot;letter.jpg&quot;, &quot;family.jpg&quot;, &quot;photo3.png&quot;, &quot;ticket.png&quot;, &quot;postcard.jpg&quot;) + &quot;&#39; class=&#39;scrap-img&#39; style=&#39;top:&quot; + (random: 0, 90) + &quot;%; left:&quot; + (random: 0, 90) + &quot;%; transform: rotate(&quot; + (random: -30, 30) + &quot;deg);&#39;&gt;&quot;)
-(set: $image5 to &quot;&lt;img src=&#39;images/&quot; + (either: &quot;letter.jpg&quot;, &quot;family.jpg&quot;, &quot;photo3.png&quot;, &quot;ticket.png&quot;, &quot;postcard.jpg&quot;) + &quot;&#39; class=&#39;scrap-img&#39; style=&#39;top:&quot; + (random: 0, 90) + &quot;%; left:&quot; + (random: 0, 90) + &quot;%; transform: rotate(&quot; + (random: -30, 30) + &quot;deg);&#39;&gt;&quot;)
+&lt;!-- Set up images manually with positions --&gt;
+(set: $image1 to &quot;&lt;img src=&#39;images/photo3.png&#39; class=&#39;scrap-img&#39; style=&#39;position:absolute; top:&quot; + (random: 0, 90) + &quot;%; left:&quot; + (random: 0, 90) + &quot;%; transform: rotate(&quot; + (random: -30, 30) + &quot;deg);&#39;&gt;&quot;)
+(set: $image2 to &quot;&lt;img src=&#39;images/ticket.png&#39; class=&#39;scrap-img&#39; style=&#39;position:absolute; top:&quot; + (random: 0, 90) + &quot;%; left:&quot; + (random: 0, 90) + &quot;%; transform: rotate(&quot; + (random: -30, 30) + &quot;deg);&#39;&gt;&quot;)
+(set: $image3 to &quot;&lt;img src=&#39;images/postcard.jpg&#39; class=&#39;scrap-img&#39; style=&#39;position:absolute; top:&quot; + (random: 0, 90) + &quot;%; left:&quot; + (random: 0, 90) + &quot;%; transform: rotate(&quot; + (random: -30, 30) + &quot;deg);&#39;&gt;&quot;)
 
-$collage
-</tw-passagedata></tw-storydata>
+&lt;!-- Display the images --&gt;
+$image1
+$image2
+$image3</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
