--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -334,7 +334,8 @@ tw-story[tags~="background2"] {
 }
 
 tw-story[tags~="background3"] {
-  background: url('images/tablecloth.jpg') center center / cover no-repeat fixed;
+  background: url('images/tablecloth.jpg') center center / cover no-repeat fixed !important;
+  background-color: #EEEDEB; /* Fallback background color */
 }
 
 .scrap-img {
@@ -532,14 +533,15 @@ The bedroom that could fit the water tank inside of it maybe,
 
 &lt;span class=&quot;falling-text&quot; style=&quot;--random-x: _x; animation-delay: _delay + s;&quot;&gt;
   _text
-&lt;/span&gt;</tw-passagedata><tw-passagedata pid="16" name="messy table" tags="backgroundimage3" position="300,1125" size="100,100">&lt;script&gt;
-  // Array of images to display
+&lt;/span&gt;</tw-passagedata><tw-passagedata pid="16" name="messy table" tags="backgroundimage3" position="300,1125" size="100,100"> &lt;script&gt;
+  // Array of images to display (add as many as you want)
   var images = [
-    &quot;letter.jpg&quot;, &quot;family.jpg&quot;, &quot;mum.jpg&quot;, &quot;maria.jpg&quot;, &quot;jesus1.jpg&quot;, 
-    &quot;jesus2.jpg&quot;, &quot;tapestry.jpg&quot;, &quot;cross.png&quot;, &quot;image4.jpg&quot;, &quot;image5.png&quot;, 
-    &quot;image6.jpg&quot;, &quot;image7.png&quot;, &quot;image8.jpg&quot;, &quot;image9.png&quot;, &quot;image10.jpg&quot;
+    &quot;letter.jpg&quot;, &quot;family.jpg&quot;, &quot;mum.jpg&quot;, &quot;cousins.jpg&quot;, &quot;postcard.jpg&quot;, 
+    &quot;farm.jpg&quot;, &quot;cross.jpg&quot;, &quot;mountains1.jpg&quot;, &quot;jesus1.jpg&quot;, &quot;stairs.jpg&quot;, 
+    &quot;italy.jpg&quot;, &quot;procession1.jpg&quot;, &quot;nonni.jpg&quot;, &quot;zio.jpg&quot;, &quot;mountain2.jpg&quot;,
+    &quot;leaf1.jpg&quot;, &quot;leaf2.jpg&quot;, &quot;maria.jpg&quot;, &quot;jesus2.jpg&quot;, &quot;church1.jpg&quot;
   ];
-  
+
   var currentIndex = 0;
 
   // Function to show images one by one
@@ -550,14 +552,20 @@ The bedroom that could fit the water tank inside of it maybe,
       img.src = &#39;images/&#39; + images[currentIndex];
       img.className = &#39;scrap-img&#39;;
 
-      // Set random positions and rotations for the images
-      var top = Math.random() * 600 + &#39;px&#39;; // Adjust the max value for vertical space
-      var left = Math.random() * 800 + &#39;px&#39;; // Adjust the max value for horizontal space
-      var rotation = Math.random() * 360 + &#39;deg&#39;;
+      // Set random positions for the images (adjust the max value for vertical and horizontal space)
+      var top = Math.random() * 600 + &#39;px&#39;;
+      var left = Math.random() * 800 + &#39;px&#39;;
+      
+      // Restrict rotation to -90° to 90° (left and right only)
+      var rotation = Math.random() * 180 - 90 + &#39;deg&#39;;  // This will give a range of -90 to 90 degrees
       
       img.style.top = top;
       img.style.left = left;
       img.style.transform = &#39;rotate(&#39; + rotation + &#39;)&#39;;
+
+      // Make images bigger
+      img.style.width = &#39;250px&#39;;  // Change the width of the images
+      img.style.height = &#39;auto&#39;;  // Keep aspect ratio intact, you can adjust height as needed
 
       // Append the image to the body of the page
       document.body.appendChild(img);
